Added to remove rounded edges when in compact mode and in normal mode but when any margin is activated

--- a/Arc 2.0/Chrome CSS/general.css
+++ b/Arc 2.0/Chrome CSS/general.css
@@ -1,4 +1,5 @@
 @-moz-document url-prefix("chrome:") {
+  
   /* ------------------------- GENERAL ZEN UI ------------------------- */
   /*Web View border extra rounded*/
   .browserContainer {
@@ -42,6 +43,9 @@
   /* ---------------------- NOGAPS MOD ------------------------ */
   
   @media (-moz-pref("arc-nogaps-mod")) {
+    :root{
+      --zen-webview-border-radius:0;
+    }
     [zen-single-toolbar="true"] {
       #zen-appcontent-wrapper {
         position: relative;
@@ -71,6 +75,7 @@
   
   @media (-moz-pref("arc-nogaps-compact-mod")) {
     :root[zen-compact-mode="true"]:not([customizing]) {
+      --zen-webview-border-radius:0;
         #zen-appcontent-wrapper:not(:has(#tabbrowser-tabpanels[zen-split-view]), :has(#zen-sidebar-web-panel:not([hidden]):not([pinned]))) {
             margin: 0 !important;
   
