Added Important information in config.css mainly for sine users

--- a/CONFIG.css
+++ b/CONFIG.css
@@ -1,4 +1,5 @@
 /*Do not edit variable names. Only edit values as directed by comments for each config*/
+/*DO NOT EDIT THIS IF YOU USED SINE TO INSTALL*/
 :root {
   --nebula-border-radius: 13px; /* This will change roundness of everything in Nebula (DEFAULT: 13px) */
   --nebula-website-tint: light-dark(rgba(255,255,255,0),rgba(0,0,0,0)); /* Edit the color values to change the tint on transparent websites */
@@ -64,5 +65,6 @@ Restart browser after applying all configs.*/
 */
   /* DO NOT ADD OTHER CSS BELOW */
   /* More styles and options will come soon here! */
+
 
 
