--- a/Arc 2.0/Chrome CSS/URLbar.css
+++ b/Arc 2.0/Chrome CSS/URLbar.css
@@ -43,6 +43,17 @@
     /* border: 1px solid rgba(255, 255, 255, 0.2); */
 }
 
+#urlbar-results,
+#PopupAutoCompleteRichResult,
+.autocomplete-richlistbox {
+  overflow-y: auto !important;
+  padding-right: 18px !important;
+  margin-right: -18px !important;
+}
+
+.urlbarView-body-outer {
+  overflow-x: hidden !important;
+}
 
 /* Smooth dropdown appearance */
 #urlbar-results {
