Added feature to have control over the blur when url bar popup

--- a/Arc 2.0/Chrome CSS/URLbar.css
+++ b/Arc 2.0/Chrome CSS/URLbar.css
@@ -181,11 +181,13 @@
   transition: all 0.3s cubic-bezier(0.175, 0.385, 0.12, 1) !important;
 }
 
-/* #browser:has(#urlbar[open]) .browserStack {
+@media (-moz-pref("arc.urlbar.background")){
+  #browser:has(#urlbar[open]) .browserStack {
     scale: 1.075 !important;
     filter: brightness(50%) blur(25px) saturate(125%) !important;
     opacity: 1 !important;
-} */
+  }
+}
 
 .browserStack:not(:has(#urlbar[open])) {
   filter: none !important;
