Update Transparent-settings.css to make every websites to be transparent

--- a/Arc 2.0/Content CSS/Transparent-settings.css
+++ b/Arc 2.0/Content CSS/Transparent-settings.css
@@ -7,6 +7,10 @@
   background-color: transparent !important;
 }
 
+html:has([data-l10n-id]){
+  background-color: transparent !important;
+}
+
 .KEYJUMP_hint{
   border-radius: 100px !important;
   background-color: #49FCBB !important;
@@ -18,7 +22,7 @@
   transition: all 0.3s ease-in-out !important;
 }
 
-@-moz-document url(about:config){
+@-moz-document url(about:config), url(about:support){
   html, #toolbar{
     background-color: transparent !important;
   }
@@ -99,3 +103,4 @@ footer{
   border: none !important;
   box-shadow: none !important;
 } */
+
