--- a/Arc 2.0/Chrome CSS/URLbar.css
+++ b/Arc 2.0/Chrome CSS/URLbar.css
@@ -181,7 +181,7 @@
   transition: all 0.3s cubic-bezier(0.175, 0.385, 0.12, 1) !important;
 }
 
-@media (-moz-pref("arc.urlbar.background")){
+@media not (-moz-pref("arc.urlbar.background")){
   #browser:has(#urlbar[open]) .browserStack {
     scale: 1.075 !important;
     filter: brightness(50%) blur(25px) saturate(125%) !important;
